fixing the coveralls